fix: correct yaml syntax and force tech stack

--- a/config.yml
+++ b/config.yml
@@ -51,7 +51,8 @@ galaxy_arms:
       - "AntiGravity"
 
 # Featured projects shown as constellation stars
-projects: []
+# Featured projects shown as constellation stars
+projects:
   - repo: "willianfigueiredodev/task-manager"
   - repo: "willianfigueiredodev/sentinel-flow"
 # - repo: 
