chore: rename focus area to Automation & IA

--- a/config.yml
+++ b/config.yml
@@ -40,7 +40,7 @@ galaxy_arms:
       - "Git"
       - "GitHub Actions"
       - "VMs"
-  - name: "Data & AI"
+  - name: "Automation & IA"
     color: "dendrite_violet"
     items:
       - "PostgreSQL"
